fix z-index of tooltips; refs #39

--- a/assets/css/sass/content/pages/_home.scss
+++ b/assets/css/sass/content/pages/_home.scss
@@ -6,11 +6,14 @@
 
 	.ws-tooltips {
 		position: absolute;
-		z-index: 1;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
+
+		.ws-tooltip {
+			z-index: 1;
+		}
 
 		.ws-tooltip-1 {
 			top: 73%;
