--- a/assets/css/worldstrides.css
+++ b/assets/css/worldstrides.css
@@ -7295,11 +7295,12 @@ section:after {
   padding: 0 5vw; }
   #intro .ws-tooltips {
     position: absolute;
-    z-index: 1;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0; }
+    #intro .ws-tooltips .ws-tooltip {
+      z-index: 1; }
     #intro .ws-tooltips .ws-tooltip-1 {
       top: 73%;
       left: 77%; }
